1999-08-23  Jochen Wiedmann  <joe@ispsoft.de> (0.1132)

	* Added HTML::EP::Install.
	* lib/HTML/EP/Session/DBI.pm: Moved DBI session to an external file.
	* Added HTML::EP::Session::DBIq. Suggested by Ilya Ketris
	  <ilya@gde.to>.
	* Added HTML::EP::Session::Dumper.

1999-08-13  Jochen Wiedmann  <joe@ispsoft.de> (0.1131)

	* lib/HTML/EP.pm (_ep_debug): Allowed empty $ENV{REMOTE_ADDR}
	  for debugging for debugging from the shell.
	* lib/HTML/EP.pm (_ep_elseif): Fixed error message for ep-elseif
	  without ep-if.
	* lib/HTML/EP/Session.pm: Fixed a bug in the docs of Cookie
	  sessions. ("name" was requested for the cookie name instead
	  of "id".)
	* lib/HTML/EP/EP.pm: Added $self->SetCookies(), which is used
	  in _ep_redirect.

1999-05-05  Jochen Wiedmann  <joe@ispsoft.de> (0.1130)

	* lib/HTML/EP.pm: Added '$' to the set of encoded
	  entities to work around problems where $...$ was
	  erroneously interpreted as an EP variable.
	* Now using HTML::Entities::char2entity rather than
	  HTML::Entities::encode_entities.

1999-04-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1129)

	* lib/HTML/EP/Examples/Glimpse.pm (glimpse_create):
	  $matchesDirsIgnored did by default return a TRUE value.
	  (Richard Dice <rdice@www.shad.ca>)
	* lib/HTML/EP.pm: HTML::Entities::encode_entities is
	  now called with '<&>"' as second argument. This should
	  enable working with other character sets that ISO-8859-1.
	  Thanks to Jiri Novak <bati@podvodnik.cz> for the hint.

1999-02-26  Jochen Wiedmann  <joe@ispsoft.de> (0.1128)

	* lib/HTML/EP/Session/Cookie.pm (encode): Added support for
	  Compress::Zlib and MIME::Base64.

1999-02-23  Jochen Wiedmann  <joe@ispsoft.de> (0.1127)

	* lib/HTML/EP/Session/Cookie.pm (store): Fixed a bug that caused
	  Cookies to be too short.

1999-02-08  Jochen Wiedmann  <joe@ispsoft.de> (0.1126)

	* lib/HTML/EP/Examples/Glimpse.pm: Fixed a bug in the parser of
	  glimpse's output: Files without title (that is, files, where